--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,7 +9,7 @@
 
 body {
     /*background-image: url("/assets/img/street2.jpg");*/
-    background-color: #DFDFDF;
+    background-color: #ffffff;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
