--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,7 +8,8 @@
 
 
 body {
-    /*background-image: url("/assets/img/street2.jpg");*/
+    /*background-image: url("/assets/img/white.jpeg");*/
+    background-image: linear-gradient(#ffffff, #fafbfd, #f7f8f6);
     background-color: #ffffff;
     background-position: center;
     background-repeat: no-repeat;
